--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <h2 class="animated jello game_title">All Games:</h2>
    <a target="_blank" rel="noopener" href="https://sites.google.com/view/brayshub"><span class="bar"></span><img src="logo.png"><b>BraysHub sites.google.com</b></a>
     <a id="My singing monsters" class="link" href="./play/subwaysurfers/" target="_blank"><span class="bar"></span><img src="subway-surfers-120-ezgif.com-webp-to-gif-converter.gif"><b>Subway Surfers (MOST POPULAR GAME)</b></a>
+    <a id="My singing monsters" class="link" href="./play/1.5.2/" target="_blank"><span class="bar"></span><img src="minecraft.png"><b>Minecraft 1.5.2</b></a>
+    <a id="My singing monsters" class="link" href="./play/1.8.8/" target="_blank"><span class="bar"></span><img src="minecraft.png"><b>Minecraft 1.8.8</b></a>
+    <a id="My singing monsters" class="link" href="./play/flappy/" target="_blank"><span class="bar"></span><img src="flappy.png"><b>Flappy Bird</b></a>
+
 
 </body>
   <script>
